fix: Advanced Search menu now overlap recipes when opened
The ASO overlap recipes, have a max width and height and they scroll when amount of items is too big to fit within container.

--- a/components/advancedSearch/_advancedSearch.scss
+++ b/components/advancedSearch/_advancedSearch.scss
@@ -1,7 +1,18 @@
 .search_items_list{
     max-height: 335px;
+    overflow-y: auto;
     li{
         width: 225px;
         cursor: pointer;
     }
 }
+
+.ingredients,
+.utensils{
+    max-width: 452px;
+}
+
+.machines{
+    max-width: 227px;
+}
+
