--- a/styles/_general.scss
+++ b/styles/_general.scss
@@ -36,3 +36,8 @@ ul{
     list-style: none;
     margin: 0;
 }
+
+.main{
+    margin-top: 105px;
+    margin-bottom: 60px;
+}
